--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: c
 before_install:
-  - wget https://dl.bintray.com/mitchellh/terraform/terraform_0.5.0_linux_amd64.zip -O /tmp/terraform.zip
+  - wget https://releases.hashicorp.com/terraform/0.6.15/terraform_0.6.15_linux_amd64.zip -O /tmp/terraform.zip
   - sudo unzip -d /usr/local/bin/ /tmp/terraform.zip
 script: make test
